2011-01-28  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/maemo/new.py:
	  Fix setting start date when adding a task.

2011-01-22  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/maemo/things.py:
	  Also list statutes in Things list.

2011-01-22  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/maemo/main.py:
	* python/mushin/maemo/start.py:
	  Add a New menu item to all menu's.

2011-01-22  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/maemo/start.py:
	  Load and show all thing info before populating, now that we don't
	  allow actually updating/adding until populated.

2011-01-22  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/maemo/new.py:
	  When completing a recurring task, first fill in task from current
	  UI so we don't overwrite title or others.

2011-01-22  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/maemo/new.py:
	  When adding a recurring task, set started to now if not set,
	  and set due to something appropriate past started.

2011-01-22  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/command/main.py:
	  Let through a unique lookup result even if it might be done.

2011-01-22  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/maemo/new.py:
	* python/mushin/maemo/start.py:
	  Only allow updating when the thing is fully loaded.

2011-01-22  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/maemo/new.py:
	  Turn off autocapitalization on add project/context/status.

2011-01-22  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/command/main.py:
	  When marking tasks as done, only disambiguate uncompleted tasks.

2011-01-22  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/command/main.py:
	  Handle invalid id's in show.  Makes show kiss not traceback.
