@@ -1,0 +1,5 @@
+function(doc) {
+  if(doc._conflicts) {
+    emit(doc._conflicts, null);
+  }
+}
